--- a/_scss/_normalize.scss
+++ b/_scss/_normalize.scss
@@ -11,9 +11,10 @@
  */
 
 html {
-  font-family: sans-serif; /* 1 */
+  font-family: 'Lato', sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  font-weight:400;
 }
 
 /**
@@ -22,6 +23,7 @@ html {
 
 body {
   margin: 0;
+  color:#555;
 }
 
 /* HTML5 display definitions
@@ -232,7 +234,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  font-family: Consolas, "Lucida Console", Monaco, monospace;
   font-size: 1em;
 }
 
