--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -1,4 +1,7 @@
+@import 'variables';
 @import 'normalize';
 @import 'global';
 @import 'header';
 @import 'subsection';
+@import 'monokai';
+@import 'about';
