--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,18 @@
       Waypoints
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet'>
     <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
   </head>
 
   <body>
-    {% include header.html %}
-    {{ content }}
+    <div class="background">
+      <div class="background-wash"></div>
+    </div>
+    <div class="container">
+      {% include header.html %}
+      {{ content }}
+      {% include footer.html %}
+    </div>
   </body>
 </html>
