--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <footer>
-  <p>A project of <a href="http://imakewebthings.com">I Make Web Things</a>. Photo by <a href="#TODO">Maciej Adwent</a>.</p>
+  <div class="inner">
+    <p>A project of <a href="http://imakewebthings.com">I Make Web Things</a>. Photo by <a href="#TODO">Maciej Adwent</a>.</p>
+  </div>
 </footer>
