--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,13 +15,13 @@
   </head>
 
   <body>
-    <div class="background">
-      <div class="background-wash"></div>
-    </div>
     <div class="container">
       {% include header.html %}
       {{ content }}
       {% include footer.html %}
     </div>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="{{ site.url }}/js/jquery.waypoints.js"></script>
+    <script src="{{ site.url }}/js/scripts.js"></script>
   </body>
 </html>
