--- a/_layouts/shortcuts.html
+++ b/_layouts/shortcuts.html
@@ -3,7 +3,9 @@ layout: default
 top_level_section: shortcuts
 ---
 
-{% include shortcuts_nav.html %}
 <main>
-  {{ content }}
+  {% include shortcuts_nav.html %}
+  <article>
+    {{ content }}
+  </article>
 </main>
