--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,13 @@
 <header>
-  <h1><a href="{{ site.url }}/">Waypoints</a></h1>
-  <nav class="on-{{ page.top_level_section }}">
-    <ul>
-      <li><a href="{{ site.url }}/" class="nav-about">About</a></li>
-      <li><a href="{{ site.url }}/guides/getting-started" class="nav-guides">Guides</a></li>
-      <li><a href="{{ site.url }}/shortcuts" class="nav-shortcuts">Shortcuts</a></li>
-      <li><a href="{{ site.url }}/api/waypoint" class="nav-api">API</a></li>
-    </ul>
-  </nav>
+  <div class="inner">
+    <h1><a href="{{ site.url }}/">Waypoints</a></h1>
+    <nav class="on-{{ page.top_level_section }}">
+      <ul>
+        <li><a href="{{ site.url }}/" class="nav-about">About</a></li>
+        <li><a href="{{ site.url }}/guides/getting-started" class="nav-guides">Guides</a></li>
+        <li><a href="{{ site.url }}/shortcuts" class="nav-shortcuts">Shortcuts</a></li>
+        <li><a href="{{ site.url }}/api/waypoint" class="nav-api">API</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
