--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -1,8 +1,10 @@
 $sections: (about, guides, shortcuts, api);
 
 header {
-  padding:0 10px;
   text-align:center;
+  overflow:hidden;
+  width:100%;
+  margin-bottom:16px;
 
   h1 {
     margin:0;
@@ -45,6 +47,10 @@ header {
     text-decoration:none;
     display:block;
   }
+
+  .inner {
+    padding:0 10px;
+  }
 }
 
 %header-active {
@@ -59,3 +65,18 @@ header {
   }
 }
 
+@include desktop {
+  header {
+    padding-top:8px;
+  }
+
+  h1 {
+    float:left;
+  }
+
+  nav {
+    float:right;
+    position:relative;
+    top:18px;
+  }
+}
