First draft of Getting Started guide. It's a start

--- a/_scss/_global.scss
+++ b/_scss/_global.scss
@@ -71,6 +71,6 @@ pre {
   body {
     background:url(../img/bg.jpg) center 0 no-repeat #fff;
     background-size:cover;
-    background-position:fixed;
+    background-attachment:fixed;
   }
 }
