--- a/_scss/styles.scss
+++ b/_scss/styles.scss
@@ -5,6 +5,8 @@
 @import 'header';
 @import 'subsection';
 @import 'monokai';
+@import 'waypoint';
 @import 'about';
 @import 'notifications';
 @import 'article';
+@import 'api';
